--- a/src/style.scss
+++ b/src/style.scss
@@ -5,17 +5,36 @@
  * Replace them with your own styles or remove the file completely.
  */
 
+// Columns
+@for $i from 1 through 6 {
+	.columns-#{$i} {
+		grid-template-columns: repeat(#{$i}, 1fr);
+	}
+}
+
+@media (max-width: 768px) {
+	@for $i from 1 through 6 {
+		.columns-tablet-#{$i} {
+			grid-template-columns: repeat(#{$i}, 1fr);
+		}
+	}
+}
+
+@media (max-width: 576px) {
+	@for $i from 1 through 6 {
+		.columns-mobile-#{$i} {
+			grid-template-columns: repeat(#{$i}, 1fr);
+		}
+	}
+}
+
 .wp-block-tcb-cards {
 	.cards {
 		display: grid;
-		// column-gap: 20px;
-		// row-gap: 20px;
-		grid-template-columns: auto auto auto;
-		// padding: 10px;
 
 		.card {
 			background-color: rgba(255, 255, 255, 0.8);
-			padding: 20px;
+			padding: 0;
 			font-size: 30px;
 			// text-align: center;
 
@@ -66,6 +85,9 @@
 				overflow: hidden;
 				border-top-right-radius: 8px;
 				border-top-left-radius: 8px;
+				width: 100%;
+				height: 250px;
+				object-fit: cover;
 				// max-width: 100%;
 			}
 
@@ -78,10 +100,6 @@
 			img.img-spider {
 				border-top-left-radius: 8px;
 				border-bottom-left-radius: 8px;
-			}
-
-			.card-body {
-				padding: var(--padding-card, 1rem);
 			}
 
 			.card-body2 {
@@ -125,12 +143,8 @@
 			.h1-white {
 				color: #ffff;
 			}
-
-			.p-white {
-				color: white;
-			}
-			p.spider-desc {
-				font-size: 13px;
+			p.desc {
+				font-size: initial;
 			}
 			.btn-wraper {
 				display: flex;
@@ -154,12 +168,12 @@
 				margin: 4%;
 				border: none;
 				outline: 0;
-				padding: 1%;
+				// padding: 1%;
 				color: white;
 				background-color: #570dfb;
 				text-align: center;
 				cursor: pointer;
-				width: 37%;
+				// width: 37%;
 				font-size: 18px;
 				&.btn-black {
 					background-color: #000;
