--- a/src/style.scss
+++ b/src/style.scss
@@ -121,7 +121,7 @@
 				display: flex;
 				align-items: center;
 				gap: 0.5rem;
-				font-size: 1.25rem;
+				// font-size: 1.25rem;
 				line-height: 1.75rem;
 				font-weight: 600;
 			}
@@ -144,7 +144,7 @@
 				color: #ffff;
 			}
 			p.desc {
-				font-size: initial;
+				// font-size: initial;
 			}
 			.btn-wraper {
 				display: flex;
